scrollbar fix with overflow hidden (#66)

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,4 @@
 .App {
   width: 100%;
+  overflow: hidden;
 }
